crates/toml/tests/snapshots/invalid/table/no-close-06.stderr
TOML parse error at line 1, column 3
  |
1 | [a
  |   ^
unclosed table, expected `]`

---
TOML parse error at line 3, column 3
  |
3 | [c
  |   ^
unclosed table, expected `]`
